# HW30-33

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: celery.py  settings.py  urls.py
lms/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/management/commands/: add_course.py  add_users.py
lms/migrations/: 0001_initial.py  0002_alter_course_options_alter_lesson_options_and_more.py  0003_alter_lesson_options.py
lms/templates/lms/: course_update_email.html
nginx/: nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/fixtures/: payments_fixture.json
users/management/commands/: create_group.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_subscription.py  0004_payment_is_paid_payment_payment_url_and_more.py
